Fixes rendering glitch on firefox in folioname

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -302,9 +302,7 @@ figure.current {
   margin: 0 0 0 .8rem; }
 
 .breadcrumbs .folioName {
-  position: relative;
-  top: .2rem;
-  display: inline-block;
+  display: inline;
   width: 5rem;
   white-space: nowrap;
   overflow: hidden;
