--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -35,9 +35,7 @@
 }
 
 .breadcrumbs .folioName {
-  position:relative;
-  top:.2rem;
-  display:inline-block;
+  display:inline;
   width: 5rem;
   white-space: nowrap;
   overflow: hidden;
